fix overflow

--- a/src/styles/blocks/header/menu.scss
+++ b/src/styles/blocks/header/menu.scss
@@ -2,6 +2,7 @@
   height: $header-size;
   background-color: $menu-bg-color;
   font-weight: 700;
+  overflow: auto;
 
   &__top {
     margin-bottom: 32px;
